# multi-agent-sim

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: main.py  storage_root.py
backend/api/: routes_competitive_league.py  routes_competitive_reports.py  routes_config.py  routes_cooperative.py  routes_cooperative_league.py  routes_cooperative_pipeline.py  routes_cooperative_reports.py  routes_experiment.py  routes_export.py  routes_history.py  routes_league.py  routes_pipeline.py  routes_reports.py  routes_transfer.py  ws_metrics.py
backend/pipeline/: __init__.py  pipeline_manager.py
backend/registry/: run_registry.py
backend/runner/: experiment_runner.py  run_manager.py
backend/schemas/: api_models.py
design/: AI-Powered_Multi-Agent_Simulation_Platform.md  Competitive_archetype.md  Cooperative_archetype.md  Defining_framework_of_environment.md  Mixed_archetype.md  Policy_export.md  Transfer_experiment.md
docs/: architecture-decisions.md  bug-audit.md  build-log.md  frontend-redesign.md  functionality-audit.md
frontend/: next.config.ts
simulation/adapters/: competitive_pettingzoo.py  cooperative_pettingzoo.py  pettingzoo_mixed.py
simulation/agents/: __init__.py  always_cooperate.py  always_extract.py  base.py  competitive_baselines.py  competitive_ppo_agent.py  cooperative_baselines.py  league_snapshot_agent.py  ppo_shared_agent.py  random_agent.py  tit_for_tat.py
simulation/analysis/: __init__.py  competitive_strategy_clustering.py  (+6 more)
(+183 files in other folders)
