[project]
name = "multi-agent-sim"
version = "0.1.0"
description = "Multi-agent simulation platform with configurable environments, PPO training, and a web dashboard"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["multi-agent", "reinforcement-learning", "simulation", "ppo", "pettingzoo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.26,<2.0",
    "pydantic>=2.0,<3.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "gymnasium>=0.29",
    "pettingzoo>=1.24",
]

[project.optional-dependencies]
training = [
    "torch>=2.0",
    "tqdm>=4.60",
    "tensorboard>=2.14",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["simulation*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
